Change Log
==========


Release 0.5.5.6
    - Bug fix and enhancement for ID: 3571582
      sorting changes for include/createAuthFiles.php
      
	- Bug fix for ID: 3571941
	  When creating new access rights an neither group nor user is selected, 
	  there is no error message
	  
	- Bug fix for ID: 3571929
	  changing group permission to 'write' doesn't work
	  
	- Bug fix for ID: 3571851
	  Missing check, whether a repository already exists
	  
	- Bug fix for ID: 3572479
	  no configurable user sort in workOnGroupAccessRight.php
	  
	- Feature request ID: 3571829
	  added datepicker in access right administration
	
Release 0.5.5.5
	- Added three custom fields (ID: 3555321)
	
	Thanks to dafraggy for submitting the patch!
	
Release 0.5.5.4
	- Added text about password change time (ID: 3566309)
	- configurable default user access right (ID: 3569311)
	- preset date instead of date description in access right report (ID: 3570520)
	- added an error message if a project responsible user is missing (ID: 3569291)
	
	Thanks to everyone sending patches!
	
Release 0.5.5.3
  	- some minor changes
  	
Release 0.5.5.2
	- Bugfix in creating repository access files
	
Release 0.5.5.1
	- Bugfix in installer
	
Release 0.5.5.0
    - new installer
    
    - included jquery and JavaScript tables. It is now possible to sort the
      table contents by clicking into the head of the columns
      
    - removed sort user by and sort user order from preferences due to sortable
      tables
      
    - removed selection for use of JaveScript in installer
      because JavaScript is now necessary for JQuery
    
    - added LDAP support
    
    - added report to user's groups and access rights
      feature request ID 3155553
      
    - changed generation of per repository access files
      feature request 3234233
      
    - fixed bug 3275587
      trailing slashes in access file are removed
      
    - fixed bug 3275587
      fixed issue in "User expired" cronjob mail
      